Repositionement de LaunchApp et modification de la classe principale dans pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,7 @@
                 <configuration>
                     <jlinkImageName>app</jlinkImageName>
                     <launcher>launcher</launcher>
-                    <mainClass>sae201/fr.univ_amu.iut.FranceMain</mainClass>
+                    <mainClass>sae201/fr.univ_amu.iut.LaunchApp</mainClass>
                 </configuration>
             </plugin>
 
